[package]
name = "nexus_relay"
version = "0.1.0"
edition = "2021"

[lib]
name = "nexus_relay"
path = "src/lib.rs"

[[bin]]
name = "nexus_relay"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.19"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lwk_wollet = "0.9.0"
reqwest = { version = "0.11", features = ["json"] }
elements = "0.25.2"
tmq = "0.3"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
jsonrpc-lite = "0.6.0"
thiserror = "1.0"

[dev-dependencies]
bitcoind = { version = "0.36.0" }
hex = "*"

[patch.crates-io]
lwk_wollet = { git = "https://github.com/Blockstream/lwk", rev = "ba7338115a2ffa0d99e327a67f6ba02b65cb074d" }
lwk_common = { git = "https://github.com/Blockstream/lwk", rev = "ba7338115a2ffa0d99e327a67f6ba02b65cb074d" }
elements = { git = "https://github.com/ElementsProject/rust-elements", rev = "378e753bb26c08705045da6b182523c95cc6f36b" }
