[package]
name = "nexus_relay"
version = "0.2.0"
edition = "2021"

[lib]
name = "nexus_relay"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "nexus_relay"
path = "src/main.rs"
test = false

[[test]]
name = "integration"
path = "test/integration.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.19"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lwk_wollet = "0.9.0"
reqwest = { version = "0.11", features = ["json"] }
elements = "0.25.2"
tmq = "0.3"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
jsonrpc-lite = "0.6.0"
thiserror = "1.0"

[dev-dependencies]
lwk_common = { version = "0.9.0" }
bitcoind = { version = "0.36.0" }
hex = "*"
lwk_signer = "0.9.0"
lwk_wollet = { version = "0.9.0", features = ["test_wallet"] }
waterfalls = { version = "0.8.3", default-features = false, features = [
    "test_env",
] }

[patch.crates-io]
lwk_wollet = { git = "https://github.com/Blockstream/lwk", rev = "35aff628436760e963f6b3f5277b3fb4f11dbb03" }
lwk_common = { git = "https://github.com/Blockstream/lwk", rev = "35aff628436760e963f6b3f5277b3fb4f11dbb03" }
lwk_signer = { git = "https://github.com/Blockstream/lwk", rev = "35aff628436760e963f6b3f5277b3fb4f11dbb03" }
elements = { git = "https://github.com/ElementsProject/rust-elements", rev = "378e753bb26c08705045da6b182523c95cc6f36b" }
waterfalls = { git = "https://github.com/RCasatta/waterfalls", rev = "766f544fdff7b32b9be7eecee607062a6e16fded" }
